--- a/64011211038-jakkapet-prog-2-all/src/main/webapp/index.html
+++ b/64011211038-jakkapet-prog-2-all/src/main/webapp/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Taitle:index</title>
+<meta charset="UTF-8">
+<title>Insert title here</title>
 </head>
 <body>
-	<h1>index.html</h1>
+<h1>Index</h1>
+<!-- 
+<a href="http://localhost:8080/prog-1-2-60-all/Week13.AddServlet">Add</a></br>
+ -->
+<a href="http://localhost:8080/64011211038-jakkapet-prog-2-all/add.html">Add</a></br>
+<a href="http://localhost:8080/64011211038-jakkapet-prog-2-all/update.html">Update</a></br>
+<a href="http://localhost:8080/64011211038-jakkapet-prog-2-all/delete.html">Delete</a></br>
+<a href="http://localhost:8080/64011211038-jakkapet-prog-2-all/search.html">Search</a></br>
+<a href="http://localhost:8080/64011211038-jakkapet-prog-2-all/Week13.ViewServlet">View</a></br>
+</br>
+<a href="http://localhost:8080/prog-1-2-60-all/Week14.BuyServlet">Buy</a></br>
+
+<h1>Summer: Student</h1>
+<table>
+	<tr>
+		<td>รหัสประจำตัว</td>
+		<td><input type="text" col="11" name="id"></td>
+	</tr>
+	<tr>
+		<td><input type="submit"></td>
+		<td></td>
+	</tr>
+</table>
 </body>
 </html>
